Bring JVM options up to date